Towards 2.1
 - methyl-stats mode: change output to TSV and make several independent files, one per type of data. Now also observe
   depths independently of fragments.   
 - The mode sample-quality-scores now supports .sam, .sam.gz, and .bam files to make a guess at the scale of
   the quality scores contained in the file.
2.0 RC2
 - Support multiple group comparisons for RNA-Seq diff exp (mode compact-alignment-to-annotation-counts).
 - Added a mode sam-comparison to compare a source SAM/BAM file with one that generated after sam-to-compact then
   compact-to-sam.
 - Refactor AlignmentWriter to introduce an interface and make it easier to create facades that modify the behaviour
   of the default writer. For instance, such a facade is BufferedSortingAlignmentWriter, which keeps a number of entries
   in memory to re-sort these entries by genomic position. This feature is used when importing already sorted SAM/BAM
   files to create sorted Goby alignments and the files contain spliced alignments that would cause mis-ordering during
   conversion.
 - Make default chunk-size dependent on the type of chunk codec used. This is useful because hybrid compression does
   better with larger chunk sizes (default chunk size for hybrid is 30000, 20000 for bzip2 and 10000 for gzip). The
   default chunk size can be overriden with -x MessageChunksWriter:chunk-size=int
 - Add ability to preserve SAM/BAM read groups. Read groups are automatically preserved if present in the input BAM file.
   The concatenate mode automatically reassigns read_origin indices (see field read_origin_index) to prevent conflicts
   when Goby files from different origins are concatenated. The approach we use is to keep the most specific read origin
   information, and let the client decide what origins/groups are equivalent given the type of analysis at hand.
   Read groups are supported by the hybrid codec (and therefore stored very efficiently), are imported from BAM with